# creskyDNS

./: .gitignore  BOOTSTRAP_IMPLEMENTATION_CHECK.md  BOOTSTRAP_PROTOCOL_SUMMARY.md  COMPLETION_CHECKLIST.md  CONFIG_EXAMPLES.md  Cargo.toml  DOCS_CENTER.md  DOH_TEST_REPORT.md  DOMAIN_LIST_FORMAT.md  DOMAIN_LIST_QUICK_REF.md  FILE_INDEX.md  FINAL_REPORT.md  GITHUB_SETUP.md  IMPLEMENTATION_GUIDE.md  INTERVAL_TIMELINE.md  LIST_RELOAD_SUMMARY.md  OPTIMIZATION_COMPLETENESS.md  OPTIMIZATION_GUIDE.md  OPTIMIZATION_QUICK_START.md  PROJECT_FEATURES.md  README.md  RULE_MATCHING.md  RULE_MATCHING_ADVANCED.md  USAGE.md  VALIDATION_TOOL.md  build-linux-simple.ps1  config-complete.yaml  config.full.yaml  config.yaml  direct_domains.txt  test-doh.ps1  test_dns_cache.rs
.cargo/: config.toml
config/: CONFIG_EXAMPLE_domain.cache.yaml  config-complete-example.yaml  config.example.json  config.example.yaml  config.full-example.yaml  config.full.yaml
docs/: 01-LOG.md  02-LISTENER.md  03-CACHE.md  04-UPSTREAMS.md  05-LISTS.md  06-RULES.md
examples/: test_cache.rs
md/: CACHE_OUTPUT_FEATURE.md  CONFIG_EXAMPLES.md  DOCS_CENTER.md  DOMAIN_DEPTH_CORRECTION_REPORT.md  DOMAIN_DEPTH_DEFINITION.md  DOMAIN_LIST_SPEC_COMPLETE.md  DOMAIN_LIST_UPDATE.md  FILE_INDEX.md  FIX_DEFAULT_UPSTREAM.md  INTERVAL_QUICK_REF.md  IP_CIDR_LIST.md  LINUX_BUILD_GUIDE.md  LIST_RELOAD.md  LIST_RELOAD_IMPLEMENTATION.md  LOG_SYSTEM.md  OPTIMIZATION_DELIVERY.md  OPTIMIZATION_INDEX.md  OPTIMIZATION_MILLION_SCALE.md  OPTIMIZATION_README.md  OPTIMIZATION_SUMMARY.md  PROJECT_FEATURES.md  QUICK_START.md  RULE_CACHE_FEATURE.md  RULE_CACHE_IMPLEMENTATION.md  RULE_MATCHING.md  RULE_MATCHING_ADVANCED.md  SPEC_DOMAIN_CACHE_RENAME.md  START_HERE.md  UPDATE_LOG_CACHE_OUTPUT.md
src/: cache.rs  config.rs  dns.rs  forwarder.rs  log.rs  (+1 more)
(+13 files in other folders)
