[package]
name = "creskyDNS"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["rt", "net", "sync", "macros", "time", "io-util"] }
hickory-proto = "0.24"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
anyhow = "1.0"
indexmap = { version = "2.0", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "registry"] }
chrono = "0.4"
base64 = "0.22"
rustls = { version = "0.21", features = ["dangerous_configuration"] }
tokio-rustls = "0.24"
webpki-roots = "0.25"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls"] }
quinn = "0.10"
tokio-socks = "0.5"

[[bin]]
name = "creskyDNS"
path = "src/main.rs"
